--- a/.env
+++ b/.env
@@ -2,9 +2,8 @@ CIRCLES_HUB_ADDRESS=0xD833215cBcc3f914bD1C9ece3EE7BF8B14f841bb
 PYTHONPATH=/app/safe_relay_service
 C_FORCE_ROOT=true
 DEBUG=0
-USE_DOCKER=True
 CELERY_BROKER_URL=redis://redis/0
-DATABASE_URL=psql://postgres:postgres@localhost:5432/postgres
+DATABASE_URL=psql://postgres:postgres@db:5432/postgres
 DJANGO_ALLOWED_HOSTS=*
 DJANGO_SECRET_KEY=test-secret#-!key
 DJANGO_SETTINGS_MODULE=config.settings.production
