--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
-cachetools==4.2.2
-celery==5.1.2
-django-authtools==1.7.0
-django-celery-beat==2.2.1
+cachetools==5.2.0
+celery==5.2.7
+django==3.2.16
+django-authtools==2.0.0
+django-celery-beat==2.3.0
 django-cors-headers==3.5.0
 django-debug-toolbar
 django-debug-toolbar-force
-django-environ==0.7.0
-django-filter==21.1
-django-model-utils==4.1.1
-django-redis==5.0.0
-django-timezone-field==4.2.1
-django==3.2.7
-djangorestframework-camel-case==1.2.0
-djangorestframework==3.12.4
-docutils==0.17.1
-drf-yasg[validation]==1.20.0
-ethereum==2.3.2
-gnosis-py[django]==3.4.1
+django-environ==0.9.0
+django-filter==22.1
+django-model-utils==4.2.0
+django-redis==5.2.0
+django-timezone-field==5.0
+djangorestframework-camel-case==1.3.0
+djangorestframework==3.14.0
+docutils==0.19
+drf-yasg[validation]==1.21.4
 gunicorn[gevent]==20.1.0
 hexbytes==0.2.2
-lxml==4.6.3
-numpy==1.21.2
-packaging==21.0
+lxml==4.9.1
+numpy==1.23.3
+packaging==21.3
 psycogreen==1.0.2
 psycopg2-binary==2.9.1
-redis==3.5.3
-requests==2.26.0
+psycopg2==2.9.4
+redis==4.3.4
+requests==2.28.1
 sgqlc==11.0
-web3==5.24.0
+safe-eth-py[django]==4.5.1
+web3==5.31.1
