--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,31 @@
-cachetools==5.2.0
+cachetools==5.3.0
 celery==5.2.7
-django==3.2.16
+django==4.1.7
 django-authtools==2.0.0
-django-celery-beat==2.3.0
-django-cors-headers==3.13.0
+django-celery-beat==2.4.0
+django-cors-headers==3.14.0
 django-debug-toolbar
 django-debug-toolbar-force
-django-environ==0.9.0
+django-environ==0.10.0
 django-filter==22.1
-django-model-utils==4.2.0
+django-model-utils==4.3.1
 django-redis==5.2.0
 django-timezone-field==5.0
-djangorestframework-camel-case==1.3.0
+djangorestframework-camel-case==1.4.2
 djangorestframework==3.14.0
 docutils==0.19
-drf-yasg[validation]==1.21.4
+drf-yasg[validation]==1.21.5
 gunicorn[gevent]==20.1.0
+hiredis==2.2.2
 hexbytes==0.2.2
-lxml==4.9.1
-numpy==1.23.3
-packaging==21.3
+lxml==4.9.2
+numpy==1.24.2
+packaging==23.0
 psycogreen==1.0.2
 psycopg2-binary==2.9.1
-psycopg2==2.9.4
-redis==4.3.4
+psycopg2==2.9.5
+redis==4.5.4
 requests==2.28.1
 sgqlc==11.0
-safe-eth-py[django]==4.8.1
-web3==5.31.1
+safe-eth-py[django]==5.0.2
+web3==5.31.3
