--- a/.github/workflows/tagbuild.yml
+++ b/.github/workflows/tagbuild.yml
@@ -30,9 +30,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Get ref
-        id: parse_ref
-        run: |
-          echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
+        run: echo ${GITHUB_REF/refs\/tags\//} >> $GITHUB_OUTPUT
 
       - name: Digital Ocean Registry login
         run: |
