--- a/.github/workflows/tagbuild.yml
+++ b/.github/workflows/tagbuild.yml
@@ -30,7 +30,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get ref
-        run: echo ${GITHUB_REF/refs\/tags\//} >> $GITHUB_OUTPUT
+        run: |
+          echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
 
       - name: Digital Ocean Registry login
         run: |
