--- a/.github/workflows/tagbuild.yml
+++ b/.github/workflows/tagbuild.yml
@@ -21,17 +21,16 @@ jobs:
           doctl auth init -t ${{ secrets.CIRCLES_CI_DO_TOKEN }}
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Get ref
-        run: |
-          echo ::set-output name=tag::${GITHUB_REF/refs\/tags\//}
+        run: echo "RELEASE_VERSION=${GITHUB_REF/refs\/tags\//}">> $GITHUB_ENV
 
       - name: Digital Ocean Registry login
         run: |
@@ -43,6 +42,6 @@ jobs:
           context: .
           push: true
           tags: |
-            registry.digitalocean.com/circles-registry/safe-relay-service:${{ steps.parse_ref.outputs.tag }}
+            registry.digitalocean.com/circles-registry/safe-relay-service:${{ env.RELEASE_VERSION }}
             joincircles/safe-relay-service:latest
-            joincircles/safe-relay-service:${{ steps.parse_ref.outputs.tag }}
+            joincircles/safe-relay-service:${{ env.RELEASE_VERSION }}
