--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ celery==5.2.7
 django==4.1.7
 django-authtools==2.0.0
 django-celery-beat==2.4.0
-django-cors-headers==3.14.0
+django-cors-headers==3.13.0
 django-debug-toolbar
 django-debug-toolbar-force
 django-environ==0.10.0
@@ -16,15 +16,17 @@ djangorestframework==3.14.0
 docutils==0.19
 drf-yasg[validation]==1.21.5
 gunicorn[gevent]==20.1.0
-hiredis==2.2.2
 hexbytes==0.2.2
+hiredis==2.2.2
 lxml==4.9.2
 numpy==1.24.2
-packaging==23.0
+packaging==21.3
 psycogreen==1.0.2
+# psycopg2-binary==2.9.1
 psycopg2==2.9.5
 redis==4.5.4
 requests==2.28.1
 sgqlc==11.0
-safe-eth-py[django]==5.0.2
+rlp<3, >=2
+safe-eth-py[django]==4.8.2
 web3==5.31.3
