--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,5 @@ psycopg2==2.9.5
 redis==4.5.4
 requests==2.28.1
 sgqlc==11.0
-rlp==2.0.1
-safe-eth-py[django]==4.8.2
-web3==5.31.3
+safe-eth-py[django]
+web3
