--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ lxml==4.9.2
 numpy==1.24.2
 packaging==21.3
 psycogreen==1.0.2
-sycopg2-binary==2.9.1
+psycopg2-binary==2.9.1
 psycopg2==2.9.5
 redis==4.5.4
 requests==2.28.1
